--- a/source/sass/blocks/form-button.scss
+++ b/source/sass/blocks/form-button.scss
@@ -1,3 +1,46 @@
-.form-button {
-	padding: 10px 44px;
+@media #{$mobile-only} {
+	.form-button {
+		padding: 10px 44px;
+		box-sizing: border-box;
+		min-width: 280px;
+		width: auto;
+	}
+}
+
+@media #{$tablet-only} {
+	.form-button {
+		box-sizing: border-box;
+		width: 282px;
+		height: 52px;
+		font-family: "Oswald", sans-serif;
+		font-size: 20px;
+		font-weight: 400;
+		text-align: center;
+		margin: 0;
+	}
+
+	.form-button__wrapper {
+		display: flex;
+		gap: 64px;
+	}
+}
+
+@media #{$desktop-only} {
+	.form-button {
+		box-sizing: border-box;
+		width: 568px;
+		height: 52px;
+		font-family: "Oswald", sans-serif;
+		font-size: 20px;
+		font-weight: 400;
+		text-align: center;
+		margin: 0;
+	}
+
+	.form-button__wrapper {
+		display: flex;
+		gap: 84px;
+		margin-left: 81px;
+		margin-bottom: 82px;
+	}
 }
