--- a/source/sass/blocks/cat-energy-description.scss
+++ b/source/sass/blocks/cat-energy-description.scss
@@ -45,7 +45,6 @@
 		line-height: 36px;
 		text-align: center;
 		color: #ffffff;
-		width: 280px;
 		margin: 0;
 		padding: 27px 20px 25px 20px;
 		z-index: 1;
@@ -60,6 +59,7 @@
 		text-transform: uppercase;
 		margin: 0;
 		z-index: 1;
+		padding-inline: 42px;
 	}
 
 	.cat-energy-description__img-wrapper {
@@ -90,7 +90,7 @@
 		grid-row: 3/4;
 		grid-column: 1/2;
 		position: absolute;
-		top: 50px;
+		top: 25px;
 		left: 60px;
 		padding: 14px 26px;
 	}
@@ -108,10 +108,8 @@
 		line-height: 60px;
 		text-align: left;
 		color: rgb(0 0 0 / 1);
-		width: 475px;
-		padding-inline: 87px 207px;
 		padding-top: 62px;
-		margin: 0 auto;
+		margin: 0 0 0 80px;
 	}
 
 	.cat-energy-description__text {
@@ -165,7 +163,6 @@
 		line-height: 60px;
 		text-align: left;
 		color: rgb(0 0 0 / 1);
-		width: 560px;
 		margin: 0;
 		padding-top: 223px;
 		padding-left: 190px;
