--- a/source/sass/blocks/cat-information.scss
+++ b/source/sass/blocks/cat-information.scss
@@ -1,9 +1,85 @@
-.cat-information {
-	display: grid;
-	row-gap: 20px;
+@media #{$mobile-only} {
+	.cat-information {
+		display: grid;
+		row-gap: 20px;
+		border: 0;
+		border-bottom: 1px solid rgb(217 217 217 / 1);
+		margin: 0;
+		padding: 0;
+		padding-bottom: 24px;
+	}
+
+	.cat-information__wrapper {
+		display: flex;
+		gap: 13px;
+	}
+
+	.cat-information__name {
+		width: 228px;
+	}
+
+	.cat-information__weight {
+		width: 207px;
+	}
+
+	.cat-information__age {
+		width: 173px;
+	}
 }
 
-.cat-information__wrapper {
-	display: flex;
-	gap: 13px;
+@media #{$tablet-only} {
+	.cat-information {
+		display: grid;
+		row-gap: 20px;
+		border: 0;
+		margin: 0;
+		padding: 0;
+		padding-bottom: 72px;
+	}
+
+	.cat-information__wrapper {
+		display: flex;
+		gap: 13px;
+	}
+
+	.cat-information__name {
+		width: 570px;
+	}
+
+	.cat-information__weight {
+		width: 542px;
+	}
+
+	.cat-information__age {
+		width: 500px;
+	}
+}
+
+@media #{$desktop-only} {
+	.cat-information {
+		display: flex;
+		flex-direction: column;
+		row-gap: 20px;
+		border: 0;
+		margin: 0;
+		padding: 0;
+	}
+
+	.cat-information__wrapper {
+		display: flex;
+		gap: 13px;
+		height: 52px;
+	}
+
+	.cat-information__name {
+		width: 509px;
+	}
+
+	.cat-information__weight {
+		width: 481px;
+	}
+
+	.cat-information__age {
+		width: 439px;
+	}
 }
