--- a/source/sass/blocks/comment.scss
+++ b/source/sass/blocks/comment.scss
@@ -2,3 +2,115 @@
 	display: flex;
 	flex-direction: column;
 }
+
+@media #{$mobile-only} {
+	.comment__title {
+		padding-bottom: 38px;
+		position: relative;
+
+		&::before {
+			content: "";
+			position: absolute;
+			display: block;
+			background-color: var(--accent-color);
+			height: 2px;
+			min-width: 158px;
+			width: auto;
+			margin-left: 150px;
+			top: 16px;
+		}
+	}
+
+	.comment__field {
+		padding: 9px 12px 125px 15px;
+		height: 150px;
+	}
+
+	.comment {
+		padding-bottom: 23px;
+	}
+}
+
+@media #{$tablet-only} {
+	.comment__title {
+		padding-bottom: 76px;
+		position: relative;
+
+		&::before {
+			content: "";
+			position: absolute;
+			display: block;
+			background-color: var(--accent-color);
+			height: 2px;
+			min-width: 30px;
+			width: auto;
+			margin-left: -70px;
+			top: 20px;
+		}
+
+		&::after {
+			content: "";
+			position: absolute;
+			display: block;
+			background-color: var(--accent-color);
+			height: 2px;
+			min-width: 478px;
+			width: auto;
+			margin-left: 220px;
+			top: 20px;
+		}
+	}
+
+	.comment__field {
+		font-size: 20px;
+		line-height: 30px;
+		padding: 10px 10px 147px 19px;
+		height: 174px;
+	}
+
+	.comment {
+		padding-bottom: 65px;
+	}
+}
+
+@media #{$desktop-only} {
+	.comment__title {
+		padding-bottom: 76px;
+		position: relative;
+
+		&::before {
+			content: "";
+			position: absolute;
+			display: block;
+			background-color: var(--accent-color);
+			height: 2px;
+			min-width: 70px;
+			width: auto;
+			margin-left: -112px;
+			top: 20px;
+		}
+
+		&::after {
+			content: "";
+			position: absolute;
+			display: block;
+			background-color: var(--accent-color);
+			height: 2px;
+			min-width: 1108px;
+			width: auto;
+			margin-left: 220px;
+			top: 20px;
+		}
+	}
+
+	.comment__field {
+		font-size: 20px;
+		line-height: 30px;
+		padding: 10px 10px 147px 19px;
+		height: 174px;
+	}
+
+	.comment {
+		padding-bottom: 67px;
+	}
+}
