--- a/source/sass/blocks/extra-form-title.scss
+++ b/source/sass/blocks/extra-form-title.scss
@@ -1,8 +1,21 @@
-.extra-form-title {
-	font-family: "oswald", sans-serif;
-	font-size: 24px;
-	font-weight: 400;
-	line-height: 26px;
-	text-align: left;
-	color: rgb(0 0 0);
+@media #{$mobile-only} {
+	.extra-form-title {
+		font-size: 24px;
+		line-height: 26px;
+		font-family: "oswald", sans-serif;
+		font-weight: 400;
+		text-align: left;
+		color: rgb(0 0 0);
+	}
+}
+
+@media #{$not-mobile} {
+	.extra-form-title {
+		font-family: "oswald", sans-serif;
+		font-size: 36px;
+		font-weight: 400;
+		line-height: 36px;
+		text-align: left;
+		color: rgb(0 0 0);
+	}
 }
