--- a/source/sass/blocks/page-form.scss
+++ b/source/sass/blocks/page-form.scss
@@ -1,7 +1,16 @@
 @media #{$desktop-only} {
 	.page-form__field-wrapper {
 		display: grid;
-		grid-template-columns: repeat(2, 1fr);
+		grid-template-columns: repeat(2, 569px);
 		gap: 80px;
+		padding-bottom: 69px;
+		width: 1220px;
+		margin: 0 auto;
+	}
+}
+
+@media #{$tablet-only} {
+	.page-form {
+		margin-inline: 40px 37px;
 	}
 }
