--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -34,6 +34,10 @@
 }
 
 @media #{$mobile-only} {
+	.page-header {
+		border-bottom: 1px solid rgb(217 217 217 / 1);
+	}
+
 	.page-header__toggle {
 		background-color: #ffffff;
 		border: none;
@@ -60,7 +64,7 @@
 	.page-header__logo-toggle-wrapper {
 		display: flex;
 		justify-content: space-between;
-		padding-bottom: 17px;
+		padding-bottom: 20px;
 	}
 
 
