--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -53,19 +53,24 @@
 
 	.contacts__title {
 		padding-bottom: 35px;
-		position: relative;
 		width: 188px;
+	}
+
+	.heading__decorated {
+		--air-gap: 2em;
+		--line-color: var(--accent-color);
+		--line-thickness: 2px;
+		position: relative;
 
 		&::before {
 			content: "";
 			position: absolute;
-			display: block;
-			background-color: var(--accent-color);
-			height: 2px;
-			min-width: 99px;
-			width: auto;
-			margin-left: 208px;
-			top: 16px;
+			inset-block-start: calc(50% + var(--line-thickness));
+			inset-inline-end: calc(100% + var(--air-gap));
+			block-size: var(--line-thickness);
+			inline-size: calc(100vw - 100% - var(--air-gap));
+			background-color: var(--line-color);
+			box-shadow: calc(100vw + var(--air-gap)) 0 0 0 var(--line-color);
 		}
 	}
 }
@@ -221,30 +226,23 @@
 
 	.contacts__title {
 		padding-bottom: 76px;
+	}
+
+	.heading__decorated {
+		--air-gap: 1em;
+		--line-color: var(--accent-color);
+		--line-thickness: 2px;
 		position: relative;
 
 		&::before {
 			content: "";
 			position: absolute;
-			display: block;
-			background-color: var(--accent-color);
-			height: 2px;
-			min-width: 30px;
-			width: auto;
-			margin-left: -70px;
-			top: 20px;
-		}
-
-		&::after {
-			content: "";
-			position: absolute;
-			display: block;
-			background-color: var(--accent-color);
-			height: 2px;
-			min-width: 145px;
-			width: auto;
-			margin-left: 555px;
-			top: 20px;
+			inset-block-start: calc(50% + var(--line-thickness));
+			inset-inline-end: calc(100% + var(--air-gap));
+			block-size: var(--line-thickness);
+			inline-size: calc(100vw - 100% - var(--air-gap));
+			background-color: var(--line-color);
+			box-shadow: calc(100vw + var(--air-gap)) 0 0 0 var(--line-color);
 		}
 	}
 }
