--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,12 +4,12 @@
 @import "./global/variables.scss";
 @import "./global/global.scss";
 @import "./blocks/page.scss";
-@import "./blocks/page-header.scss";
+@import "./blocks/main-header.scss";
 @import "./blocks/main-container.scss";
 @import "./blocks/cat-energy-description.scss";
 @import "./blocks/button.scss";
 @import "./blocks/program-type.scss";
-@import "./blocks/site-list.scss";
+@import "./blocks/main-nav.scss";
 @import "./blocks/advantages.scss";
 @import "./blocks/example.scss";
 @import "./blocks/before-after-slider.scss";
