add slider and fixed radio

--- a/source/sass/blocks/cooperation.scss
+++ b/source/sass/blocks/cooperation.scss
@@ -24,6 +24,7 @@
 		display: flex;
 		padding-block: 26px;
 		gap: 2px;
+		justify-content: space-between;
 	}
 
 	.cooperation--form-page {
@@ -47,6 +48,7 @@
 		padding-block: 56px;
 		gap: 365px;
 		margin-inline: 40px;
+		justify-content: space-between;
 	}
 
 	.cooperation--form-page {
