--- a/source/sass/blocks/before-after-slider.scss
+++ b/source/sass/blocks/before-after-slider.scss
@@ -1,3 +1,145 @@
-.before-after-slider {
-	display: flex;
+@media #{$tablet-only} {
+	.before-after-slider__button-wrapper {
+		position: relative;
+	}
+
+	.before-after-slider__button {
+		display: block;
+		width: 4px;
+		height: 512px;
+		padding: 0;
+		background-color: #666666;
+		border: none;
+		border-radius: 2px;
+		position: absolute;
+		left: 280px;
+
+		&::before {
+			content: "";
+			position: absolute;
+			display: block;
+			height: 40px;
+			width: 40px;
+			background-image: url("/icons/stack.svg#thumb");
+			top: 100px;
+			left: -19px;
+		}
+	}
+
+	.before-after-slider {
+		position: relative;
+		display: inline-block;
+		width: 100%;
+		max-width: 560px;
+		overflow: hidden;
+		margin-block: 100px;
+	}
+
+	.before-after-slider__img-before {
+		position: absolute;
+		width: 50%;
+		max-width: auto;
+		overflow: hidden;
+	}
+
+	.before-after-slider__img {
+		display: block;
+	}
+}
+
+@media #{$mobile-only} {
+	.before-after-slider__button-wrapper {
+		position: relative;
+	}
+
+	.before-after-slider__button {
+		display: block;
+		width: 4px;
+		height: 256px;
+		padding: 0;
+		background-color: #666666;
+		border: none;
+		border-radius: 2px;
+		position: absolute;
+		left: 140px;
+
+		&::before {
+			content: "";
+			position: absolute;
+			display: block;
+			height: 40px;
+			width: 40px;
+			background-image: url("/icons/stack.svg#thumb");
+			top: 100px;
+			left: -19px;
+		}
+	}
+
+	.before-after-slider {
+		position: relative;
+		display: inline-block;
+		width: 100%;
+		max-width: 280px;
+		overflow: hidden;
+	}
+
+	.before-after-slider__img-before {
+		position: absolute;
+		width: 50%;
+		max-width: auto;
+		overflow: hidden;
+	}
+
+	.before-after-slider__img {
+		display: block;
+	}
+}
+
+@media #{$desktop-only} {
+	.before-after-slider__button-wrapper {
+		position: relative;
+	}
+
+	.before-after-slider__button {
+		display: block;
+		width: 4px;
+		height: 512px;
+		padding: 0;
+		background-color: #666666;
+		border: none;
+		border-radius: 2px;
+		position: absolute;
+		left: 280px;
+
+		&::before {
+			content: "";
+			position: absolute;
+			display: block;
+			height: 40px;
+			width: 40px;
+			background-image: url("/icons/stack.svg#thumb");
+			top: 230px;
+			left: -19px;
+		}
+	}
+
+	.before-after-slider {
+		position: relative;
+		display: inline-block;
+		width: 100%;
+		max-width: 560px;
+		overflow: hidden;
+		margin-top: -150px;
+	}
+
+	.before-after-slider__img-before {
+		position: absolute;
+		width: 50%;
+		max-width: auto;
+		overflow: hidden;
+	}
+
+	.before-after-slider__img {
+		display: block;
+	}
 }
