--- a/source/sass/blocks/program-goal.scss
+++ b/source/sass/blocks/program-goal.scss
@@ -23,50 +23,47 @@
 	.program-goal-wrapper {
 		display: flex;
 		flex-direction: column;
-		gap: 25px;
-		padding-block: 28px 25px;
-		padding-left: 45px;
+		gap: 13px;
+		padding-block: 22px 19px;
 	}
 
 	.program-goal__item {
 		position: relative;
-	}
-
-	.program-goal__item::after {
-		content: "";
-		display: block;
-		position: absolute;
+		box-sizing: border-box;
+		margin: 0;
 		width: 30px;
 		height: 30px;
 		border: 1px solid rgb(205 205 205 / 1);
 		border-radius: 50%;
-		top: -22px;
-		left: -42px;
+	}
+
+	.program-goal__item::after {
+		content: "";
+		position: absolute;
+		inset: -1px;
 	}
 
 	.program-goal__item:checked::before {
 		content: "";
 		display: block;
-		position: absolute;
-		width: 30px;
-		height: 30px;
-		background-image: url("/icons/stack.svg#tick-radio");
-		top: -21px;
-		left: -41px;
+		background-image: url(".../.../icons/stack.svg#tick-radio");
 	}
 
 	.program-goal__item-label {
 		font-size: 16px;
 		line-height: 18px;
+		display: flex;
+		gap: 15px;
+		align-items: center;
 	}
 }
 
 @media #{$tablet-only} {
 	.program-goal {
-		padding: 30px 0 30px 40px;
+		padding: 25px 0 25px 28px;
 		margin: 0;
 		margin-left: 41px;
-		margin-right: 66px;
+		margin-right: 30px;
 		margin-bottom: 71px;
 		border: 1px solid rgb(231 231 231 / 1);
 	}
@@ -80,46 +77,44 @@
 	.program-goal__item-label {
 		font-size: 20px;
 		line-height: 30px;
+		display: flex;
+		gap: 20px;
+		align-items: center;
 	}
 
 	.program-goal__item {
 		position: relative;
-	}
-
-	.program-goal__item::after {
-		content: "";
-		display: block;
-		position: absolute;
+		box-sizing: border-box;
+		margin: 0;
 		width: 40px;
 		height: 40px;
 		border: 1px solid rgb(205 205 205 / 1);
 		border-radius: 50%;
-		top: -29px;
-		left: -54px;
+	}
+
+	.program-goal__item::after {
+		content: "";
+		position: absolute;
+		inset: -1px;
 	}
 
 	.program-goal__item:checked::before {
 		content: "";
 		display: block;
-		position: absolute;
-		width: 40px;
-		height: 40px;
-		background-image: url("/icons/stack.svg#tick-radio");
-		top: -28px;
-		left: -52px;
+		background-image: url(".../.../icons/stack.svg#tick-radio");
 	}
 }
 
 @media #{$desktop-only} {
 	.program-goal {
-		padding: 30px 0 30px 80px;
+		padding: 25px 0 25px 28px;
 		border: 1px solid rgb(231 231 231 / 1);
 	}
 
 	.program-goal-wrapper {
 		display: flex;
 		flex-direction: column;
-		gap: 23px;
+		gap: 18px;
 	}
 
 	.program-goal-wrapper-desktop {
@@ -130,32 +125,30 @@
 	.program-goal__item-label {
 		font-size: 20px;
 		line-height: 30px;
+		display: flex;
+		align-items: center;
+		gap: 20px;
 	}
 
 	.program-goal__item {
 		position: relative;
-	}
-
-	.program-goal__item::after {
-		content: "";
-		display: block;
-		position: absolute;
+		box-sizing: border-box;
+		margin: 0;
 		width: 40px;
 		height: 40px;
 		border: 1px solid rgb(205 205 205 / 1);
 		border-radius: 50%;
-		top: -29px;
-		left: -54px;
+	}
+
+	.program-goal__item::after {
+		content: "";
+		position: absolute;
+		inset: -1px;
 	}
 
 	.program-goal__item:checked::before {
 		content: "";
 		display: block;
-		position: absolute;
-		width: 40px;
-		height: 40px;
-		background-image: url("/icons/stack.svg#tick-radio");
-		top: -28px;
-		left: -52px;
+		background-image: url(".../.../icons/stack.svg#tick-radio");
 	}
 }
