--- a/source/sass/blocks/program-type.scss
+++ b/source/sass/blocks/program-type.scss
@@ -35,38 +35,29 @@
 		width: fit-content;
 		position: relative;
 
+		--has-icon: "";
+		--circle-radius: calc(100% * 100 / 280);
+		--circle-color: var(--accent-color);
+		--icon-position: left;
+		--icon-size: 140px;
+		--icon-margin: -6px 9px 12px -8px;
+
 		&::before {
-			content: "";
-			position: absolute;
+			content: var(--has-icon, none);
 			display: block;
-			width: 100px;
-			height: 100px;
-			border-radius: 50%;
-			background-color: var(--accent-color);
-			left: 55px;
-			top: -40px;
+			float: var(--icon-position);
+			block-size: var(--icon-size);
+			inline-size: var(--icon-size);
+			margin: var(--icon-margin);
+			background-image: var(--icon, var(--icon-a)), radial-gradient(var(--circle-color) calc(var(--circle-radius) - 0.5px), transparent calc(var(--circle-radius) + 0.5px));
 		}
 
-		&--slim::after {
-			content: "";
-			position: absolute;
-			display: block;
-			background-image: url("/icons/stack.svg#tall-cat");
-			width: 70px;
-			height: 97px;
-			left: 77px;
-			top: -40px;
+		&--slim {
+			--icon: url("/icons/stack.svg#tall-cat");
 		}
 
-		&--pro::after {
-			content: "";
-			position: absolute;
-			display: block;
-			background-image: url("/icons/stack.svg#long-cat");
-			width: 134px;
-			height: 56px;
-			left: 33px;
-			top: -17px;
+		&--pro {
+			--icon: url("/icons/stack.svg#long-cat");
 		}
 	}
 
@@ -105,7 +96,7 @@
 		--circle-radius: calc(100% * 100 / 280);
 		--circle-color: var(--accent-color);
 		--icon-position: left;
-		--icon-size: 50px;
+		--icon-size: 70px;
 		--icon-margin: -6px 9px 12px -8px;
 
 		&::before {
@@ -123,7 +114,7 @@
 		}
 
 		&--pro {
-			--icon: url{"/icons/stack.svg#long-cat"};
+			--icon: url("/icons/stack.svg#long-cat");
 		}
 	}
 
@@ -172,38 +163,29 @@
 		font-size: 36px;
 		line-height: 36px;
 
+		--has-icon: "";
+		--circle-radius: calc(100% * 100 / 280);
+		--circle-color: var(--accent-color);
+		--icon-position: left;
+		--icon-size: 280px;
+		--icon-margin: -6px 9px 12px -8px;
+
 		&::before {
-			content: "";
-			position: absolute;
+			content: var(--has-icon, none);
 			display: block;
-			width: 200px;
-			height: 200px;
-			border-radius: 50%;
-			background-color: var(--accent-color);
-			left: 450px;
-			top: -10px;
+			float: var(--icon-position);
+			block-size: var(--icon-size);
+			inline-size: var(--icon-size);
+			margin: var(--icon-margin);
+			background-image: var(--icon, var(--icon-a)), radial-gradient(var(--circle-color) calc(var(--circle-radius) - 0.5px), transparent calc(var(--circle-radius) + 0.5px));
 		}
 
-		&--slim::after {
-			content: "";
-			position: absolute;
-			display: block;
-			background-image: url("/icons/stack.svg#tall-cat");
-			width: 150px;
-			height: 195px;
-			left: 465px;
-			top: -25px;
+		&--slim {
+			--icon: url("/icons/stack.svg#tall-cat");
 		}
 
-		&--pro::after {
-			content: "";
-			position: absolute;
-			display: block;
-			background-image: url("/icons/stack.svg#long-cat");
-			width: 268px;
-			height: 112px;
-			left: 400px;
-			top: 33px;
+		&--pro {
+			--icon: url("/icons/stack.svg#long-cat");
 		}
 	}
 
